--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div>
                         <a href="#">Home</a>
-                        <a href="#">About</a>
+                        <a href="#about">About</a>
                         <a href="#">Services</a>
                         <a href="#">Blog</a></li>
                         <a href="#">More</a>
@@ -60,7 +60,7 @@
         </div>
     </div>
     <!-- init section -->
-    <section class="about">
+    <section class="about" id="about">
         <div class="container flex items-centre">
             <div class="left flex-1 justify-right">
                 <img src="./asset/img/top-view-of-unrecognizable-hacker-performing-cyberattack-at-night.jpg" height="400px" alt="profile pic">
@@ -81,6 +81,114 @@
             </div>
         </div>
     </section>
+    <!-- init a section of services -->
+    <section class="services">
+        <div class="container">
+            <h1 class="services-head">Services</h1>
+            <p>All your digital needs... covered.</p>
+            <div id="cards">
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-image">
+                        <i class="fa-solid fa-calculator"></i>
+                    </div>
+                    <div class="card-info-wrapper">
+                      <div class="card-info">
+                        <i class="fa-solid fa-calculator"></i>
+                        <div class="card-info-title">
+                          <h3>Contabilidad</h3>  
+                          <h4>Places to be apart. Wait, what?</h4>
+                        </div>    
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-image">
+                      <i class="fa-solid fa-object-ungroup"></i>
+                    </div>
+                    <div class="card-info-wrapper">
+                      <div class="card-info">
+                        <i class="fa-solid fa-object-ungroup"></i>
+                        <div class="card-info-title">
+                          <h3>Multimedia</h3>  
+                          <h4>A single corn. Er, I mean horn.</h4>
+                        </div>    
+                      </div>  
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-image">
+                      <i class="fa-solid fa-code"></i>
+                    </div>
+                    <div class="card-info-wrapper">
+                      <div class="card-info">
+                        <i class="fa-solid fa-code"></i>
+                        <div class="card-info-title">
+                          <h3>Programación</h3>  
+                          <h4>These absolutely deserve to exist.</h4>
+                        </div>    
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-image">
+                      <i class="fa-solid fa-database"></i>
+                    </div>
+                    <div class="card-info-wrapper">
+                      <div class="card-info">
+                        <i class="fa-solid fa-database"></i>
+                        <div class="card-info-title">
+                          <h3>Asistencia Administrativa</h3>  
+                          <h4>See you...</h4>
+                        </div>    
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-image">
+                      <i class="fa-solid fa-suitcase-medical"></i>
+                    </div>
+                    <div class="card-info-wrapper">
+                      <div class="card-info">
+                        <i class="fa-solid fa-suitcase-medical"></i>
+                        <div class="card-info-title">
+                          <h3>Medicina</h3>  
+                          <h4>...over here.</h4>
+                        </div>    
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-image">
+                      <i class="fa-solid fa-language"></i>
+                    </div>
+                    <div class="card-info-wrapper">
+                      <div class="card-info">
+                        <i class="fa-solid fa-language"></i>
+                        <div class="card-info-title">
+                          <h3>Lenguaje</h3>  
+                          <h4>Look at me, imma cute lil fella.</h4>
+                        </div>    
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+            
+        </div>
+    </section>
+    <script src="./asset/js/app.js"></script>
 </body>
 
 </html>
