--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div>
                         <a href="#">Home</a>
                         <a href="#about">About</a>
-                        <a href="#">Services</a>
+                        <a href="#services">Services</a>
                         <a href="#">Blog</a></li>
                         <a href="#">More</a>
                     </div>
@@ -87,7 +87,7 @@
         </div>
     </section>
     <!-- init a section of services -->
-    <section class="services">
+    <section class="services" id="services">
         <div class="Container">
             <h1 class="services-head">Services</h1>
             <p>All your digital needs... covered.</p>
@@ -244,8 +244,8 @@
             </div>
         </div>
     </footer>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
     <script src="./asset/js/app.js"></script>
 </body>
 
