--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
               <input class="submit-btn" type="submit" value="Submit">
            </div>
         </form>
+        <p class="note">Based on <a class="link" href="https://github.com/brayanospina2005/WorkCompany" target="blank">Work Company</a>.</p>
      </section>
-     <p class="note">Based on <a class="link" href="http://redcollar.digital/contacts/" target="blank">Red Collar Contact Form</a>.</p>
     <!-- init footer -->
     <footer class="site-footer">
         <div class="contenedor">
