--- a/registro.html
+++ b/registro.html
@@ -27,15 +27,21 @@ if ($_POST) {
     <div class="container right-panel-active">
         <!-- Sign Up -->
         <div class="container__form container--signup">
-        <form method="POST" class="form" id="form2" >
-                <h2 class="form__title">Sign In</h2>
-                <input name="Usuario" type="text" placeholder="Email" class="input" required />
-                <input  name="contrasena" type="password" placeholder="Password" class="input" required />
-               
-                <a href="#" class="link">Forgot your password?</a>
-                <button type="submit" class="btn">Sign In</button>
+        <form action="#" class="form" id="form1">
+                <h2 class="form__title">Sign Up</h2>
+                <input type="text" placeholder="User" class="input" />
+                <div class="form_radio">
+
+                    <label class="radio-inline">
+                        <input type="radio" name="movimiento" value="Venta">Estudiante</label>
+                     <label class="radio-inline">
+                        <input type="radio" name="movimiento" value="Renta" required> Empresa </label>
+                </div>
+                <input type="email" placeholder="Email" class="input" />
+                <input type="password" placeholder="Password" class="input" />
+                <button class="btn">Sign Up</button>
             </form>
-            </form>
+            
         </div>
 
         <!-- Sign In -->
@@ -57,7 +63,7 @@ if ($_POST) {
                     <button class="btn" id="signIn">Socials</button>
                 </div>
                 <div class="overlay__panel overlay--right">
-                    <button class="btn" id="signUp">Sign In</button>
+                    <button class="btn" id="signUp">Sign Up</button>
                 </div>
             </div>
         </div>
