--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@
                 <label class="label" for="email">E-mail</label>
             </div>
             <div class="form-field col x-100">
-                <input id="message" name="message" class="input-text js-input" type="text" required>
-                <label class="label" for="message">Message</label>
+                <input id="message" name="message" class="input-text js-input" type="text" value="Segura?" readonly required>
+                <label class="label" for="message"></label>
             </div>
             <div class="form-field col x-100 align-center">
                 <input class="submit-btn" id="button" name="submit" type="submit" value="Send Email">
